--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>【高校化学基礎】インタラクティブ学習サイト</title>
+    <title>【高校化学基礎学習サイト】</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;800&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -120,8 +120,8 @@
     <!-- ヒーローセクション -->
     <div class="hero-section">
         <div class="hero-content">
-            <h1 class="text-4xl md:text-6xl lg:text-7xl mb-4 text-transparent bg-clip-text bg-gradient-to-r from-sky-300 to-indigo-400">化学の世界へ、ようこそ。</h1>
-            <p class="text-lg md:text-2xl text-slate-300 mb-10 max-w-3xl mx-auto">原子、分子から化学反応まで。インタラクティブな学びで、化学の「なぜ？」を「なるほど！」に変えよう。</p>
+            <h1 class="text-4xl md:text-6xl lg:text-7xl mb-4 text-transparent bg-clip-text bg-gradient-to-r from-sky-300 to-indigo-400">化学基礎入門</h1>
+            <p class="text-lg md:text-2xl text-slate-300 mb-10 max-w-3xl mx-auto">一緒に楽しく学ぼう^^</p>
         </div>
     </div>
 
@@ -130,7 +130,7 @@
         <div class="max-w-7xl mx-auto pb-196">
             <div class="text-center mb-20 animate-on-scroll slide-from-left">
                 <h2 class="text-3xl md:text-5xl font-bold">学習単元一覧</h2>
-                <p class="text-slate-400 mt-4 text-lg">興味のある単元から始めよう！</p>
+                <p class="text-slate-400 mt-4 text-lg"></p>
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-12 gap-8">
@@ -152,8 +152,8 @@
 
                 <div class="md:col-start-5 md:col-span-4 mt-0 md:-mt-24 animate-on-scroll slide-from-left">
                     <a href="#" class="topic-card">
-                        <h3 class="text-2xl font-bold text-emerald-300 mb-3 text-center">物質の三態</h3>
-                        <p class="text-slate-400">固体・液体・気体。物質が見せる３つの姿と、その間の状態変化について探求します。</p>
+                        <h3 class="text-2xl font-bold text-emerald-300 mb-3 text-center">物質について</h3>
+                        <p class="text-slate-400">混合物から純物質を取り出す方法から、物質内に含まれている元素の検出方法について学びます。</p>
                     </a>
                 </div>
 
@@ -161,7 +161,7 @@
                 <div class="md:col-start-2 md:col-span-5 mt-16 animate-on-scroll slide-from-right">
                     <a href="mol.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-amber-300 mb-3 text-center">molについて</h3>
-                        <p class="text-slate-400">化学計算の心臓部！目に見えない粒子の数を扱うための魔法の単位「モル」をマスターします。</p>
+                        <p class="text-slate-400">高校化学の一番の山場！目に見えない粒子の数を扱うための魔法の単位「モル」をマスターします。</p>
                     </a>
                 </div>
 
@@ -371,6 +371,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
