--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="hero-section">
         <div class="hero-content">
             <h1 class="text-4xl md:text-6xl lg:text-7xl mb-4 text-transparent bg-clip-text bg-gradient-to-r from-sky-300 to-indigo-400">化学基礎入門</h1>
-            <p class="text-lg md:text-2xl text-slate-300 mb-10 max-w-3xl mx-auto">一緒に楽しく学ぼう^^</p>
+            <p class="text-lg md:text-2xl text-slate-300 mb-10 max-w-3xl mx-auto"></p>
         </div>
     </div>
 
@@ -130,7 +130,7 @@
         <div class="max-w-7xl mx-auto pb-196">
             <div class="text-center mb-20 animate-on-scroll slide-from-left">
                 <h2 class="text-3xl md:text-5xl font-bold">学習単元一覧</h2>
-                <p class="text-slate-400 mt-4 text-lg"></p>
+                <p class="text-slate-400 mt-4 text-lg">一緒に楽しく学ぼう^^</p>
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-12 gap-8">
@@ -371,6 +371,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
