--- a/mol.html
+++ b/mol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>モルを制する者は化学を制す</title>
+    <title>molを制する者、化学を制す</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;800&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -123,9 +123,9 @@
     <!-- ヒーローセクション -->
     <div id="hero" class="section bg-gradient-to-b from-slate-900 to-slate-800 text-white text-center">
         <div class="fade-in">
-            <h1 class="text-4xl md:text-6xl mb-4">モルを制する者は<br>化学を制す</h1>
-            <p class="text-lg md:text-2xl text-slate-300 mb-8">化学計算の最重要概念「mol」。<br>その本質を理解すれば、化学の世界はもっと面白くなる。</p>
-            <a href="#problem" class="btn btn-primary">さあ、始めよう</a>
+            <h1 class="text-4xl md:text-6xl mb-4">molを制する者<br>化学を制す</h1>
+            <p class="text-lg md:text-2xl text-slate-300 mb-8">化学計算の最重要概念「mol」。<br>molのおかげで化学の計算が圧倒的に楽になった。</p>
+            
         </div>
     </div>
 
@@ -1013,4 +1013,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
