--- a/index.html
+++ b/index.html
@@ -186,14 +186,15 @@
                         <p class="text-slate-400">電子のやり取りで起こる化学反応。電池の仕組みから金属のイオン化傾向までを学びます。</p>
                     </a>
                 </div>
-
+                <br><br><br><br><br><br><br>
                 <!-- Group 4: トレーニング -->
-                <div class="md:col-start-7 md:col-span-4 mt-16 animate-on-scroll slide-from-left-diag">
+                <div class="md:col-start-5 md:col-span-4 mt-0 md:-mt-24 animate-on-scroll slide-from-left">
                     <a href="molmaster.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-purple-300 mb-3 text-center">モル・マスターへの道</h3>
                         <p class="text-slate-400">モル計算のトレーニング！</p>
                     </a>
                 </div>
+                <br><br><br><br><br><br><br>
 
             </div>
         </div>
@@ -379,6 +380,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
