--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                     </a>
                 </div>
                 <!-- Group 4: トレーニング -->
-                <div class="md:col-start-4 md:col-span-6 mt-20 mb-20 animate-on-scroll slide-from-left">
+                <div class="md:col-start-4 md:col-span-6 mt-40 mb-40 animate-on-scroll slide-from-left">
                     <a href="molmaster.html" class="topic-card">
-                        <h3 class="text-2xl font-bold text-purple-300 mb-3 text-center">モル・マスターへの道</h3>
+                        <h3 class="text-2xl font-bold text-white-300 mb-3 text-center">モル・マスターへの道</h3>
                         <p class="text-slate-400">モル計算のトレーニング！</p>
                     </a>
                 </div>
@@ -372,6 +372,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
