--- a/molmaster.html
+++ b/molmaster.html
@@ -147,9 +147,9 @@
                         <h3 class="font-bold text-sm text-blue-800">自己ベスト</h3>
                         <p id="high-score" class="font-orbitron text-2xl text-blue-600">0</p>
                     </div>
-                    <div class="w-1/2 bg-white/50 p-3 rounded-lg">
+                    <div class="w-1/2 bg-white/50 p-3 rounded-lg h-32 overflow-y-auto">
                         <h3 class="font-bold text-sm text-center text-orange-800">オンラインランキング</h3>
-                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700 truncate">
+                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700">
                             <li>読み込み中...</li>
                         </ol>
                     </div>
