--- a/molmaster.html
+++ b/molmaster.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="w-2/3 bg-white/50 p-3 rounded-lg h-32 overflow-y-auto">
                         <h3 class="font-bold text-sm text-center text-orange-800">ランキング</h3>
-                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700">
+                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700　truncate">
                             <li>読み込み中...</li>
                         </ol>
                     </div>
