--- a/molmaster.html
+++ b/molmaster.html
@@ -147,12 +147,17 @@
                         <h3 class="font-bold text-sm text-blue-800">自己ベスト</h3>
                         <p id="high-score" class="font-orbitron text-2xl text-blue-600">0</p>
                     </div>
-                    <div class="w-2/3 bg-white/50 p-3 rounded-lg h-32 overflow-y-auto">
-                        <h3 class="font-bold text-sm text-center text-orange-800">ランキング</h3>
-                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700　truncate">
+
+                <div class="w-2/3 bg-white/50 p-3 rounded-lg h-32">
+                    <h3 class="font-bold text-sm text-center text-orange-800 mb-2">ランキング</h3>
+                    <div class="h-24 overflow-x-auto overflow-y-auto">
+                        <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700 whitespace-nowrap">
                             <li>読み込み中...</li>
                         </ol>
                     </div>
+                </div>
+
+                    
                 </div>
 
                 <div class="bg-blue-100/80 text-left p-3 rounded-lg mb-6 text-sm text-gray-700">
