--- a/molmaster.html
+++ b/molmaster.html
@@ -138,7 +138,7 @@
             <!-- スタート画面 -->
             <div id="start-screen">
                 <div class="flex justify-center mb-4">
-                     <div class="text-5xl animate-bounce">🧪</div>
+                     <div class="text-5xl animate-bounce">👨‍🔬</div>
                 </div>
                 <h2 class="text-xl font-bold text-gray-800 mb-4">挑戦を始めるかね？</h2>
                 
