--- a/molmaster.html
+++ b/molmaster.html
@@ -202,9 +202,9 @@
                 </div>
             
                 <!-- ランキング表示エリア -->
-                <div class="bg-white/50 p-3 rounded-lg h-32 mb-6">
+                <div class="bg-white/50 p-3 rounded-lg h-36 mb-6">
                     <h3 class="font-bold text-sm text-center text-orange-800 mb-2">ランキング</h3>
-                    <div class="h-30 overflow-x-auto overflow-y-auto">
+                    <div class="h-24 overflow-x-auto overflow-y-auto">
                         <ol id="ranking-list" class="list-decimal list-inside text-sm text-left text-orange-700 whitespace-nowrap">
                             <li>読み込み中...</li>
                         </ol>
@@ -212,7 +212,7 @@
                 </div>
             
                 <button id="start-button" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-4 rounded-lg text-xl shadow-lg transform hover:scale-105 transition-transform">ゲームスタート！</button>
-                <div class="flex justify-center mb-4 p-3">
+                <div class="flex justify-center my-3 ">
                      <div class="text-5xl animate-bounce">🧪</div>
                 </div>
                 <h2 class="text-xl font-bold text-gray-800 mb-4">挑戦を始めるかね？</h2>
