--- a/molmaster.html
+++ b/molmaster.html
@@ -212,10 +212,10 @@
                 </div>
             
                 <button id="start-button" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-4 rounded-lg text-xl shadow-lg transform hover:scale-105 transition-transform">ゲームスタート！</button>
-                <div class="flex justify-center my-3 ">
+                <div class="flex justify-center mt-6 ">
                      <div class="text-5xl animate-bounce">🧪</div>
                 </div>
-                <h2 class="text-xl font-bold text-gray-800 mb-4">挑戦を始めるかね？</h2>
+                <h2 class="text-xl font-bold text-gray-800 my-2">挑戦を始めるかね？</h2>
             </div>
 
             <!-- 問題画面 -->
