--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
                         <p class="text-slate-400">モル計算のトレーニング！</p>
                     </a>
                 </div>
+                <!-- Group 5: Nurse Solution -->
+                <div class="md:col-start-4 md:col-span-6 mt-16 mb-40 animate-on-scroll slide-from-right">
+                    <a href="nurse_solution.html" class="topic-card">
+                        <h3 class="text-2xl font-bold text-cyan-300 mb-3 text-center">Nurse Solution</h3>
+                        <p class="text-slate-400">溶液の濃度計算をマスターしよう！</p>
+                    </a>
+                </div>
 
             </div>
         </div>
@@ -372,6 +379,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
