--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <!-- Group 4: トレーニング -->
                 <div class="md:col-start-4 md:col-span-6 mt-40 animate-on-scroll slide-from-left">
-                    <a href="molmaster.html" class="topic-card">
+                    <a href="molmaster2.html" class="topic-card">
                         <h3 class="text-2xl font-bold text-white-300 mb-3 text-center">モル・マスターへの道</h3>
                         <p class="text-slate-400">モル計算のトレーニング！</p>
                     </a>
@@ -379,6 +379,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
