--- a/molmaster2.html
+++ b/molmaster2.html
@@ -156,10 +156,10 @@
             pointer-events: all;
         }
         #hint-panel {
-            left: 20px;
+            left: calc(50% - 380px);  /* メインから少し離す */
         }
         #explanation-panel {
-            right: 20px;
+            right: calc(50% - 380px);
         }
 
         @media (max-width: 768px) {
