Update panel positioning with calc for responsiveness
Adjust positioning of hint and explanation panels using calc.

--- a/molmaster2.html
+++ b/molmaster2.html
@@ -157,10 +157,10 @@
             pointer-events: all;
         }
         #hint-panel {
-            left: 20px;
+            left: calc(50% - 224px - 310px);  /* メインパネル幅の半分 + サイドパネル幅 */
         }
         #explanation-panel {
-            right: 20px;
+            right: calc(50% - 224px - 420px);
         }
 
         /* 博士の講義モード用の背景アニメーション */
